# OpenArrows

./: .gitmodules  CMakeLists.txt
src/: arrows.h  game-map.c  game-map.h  gl-debug.c  gl-debug.h  main.c
src/shaders/: arrow.comp  arrow.frag  arrow.vert  grid.frag  grid.vert  rect.frag  rect.vert
